gitops/stages/040-governed-models-as-a-service/base/maas-controller-upstream/observability/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  labels:
    app.kubernetes.io/component: monitoring
    app.kubernetes.io/part-of: maas
    app.opendatahub.io/modelsasservice: 'true'
  name: maas-controller-allow-monitoring
  namespace: redhat-ods-applications
spec:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: redhat-ods-monitoring
    ports:
    - port: 8080
      protocol: TCP
  podSelector:
    matchLabels:
      control-plane: maas-controller
  policyTypes:
  - Ingress
